Fix BUILD data attribute

--- a/ppo_balancer/BUILD
+++ b/ppo_balancer/BUILD
@@ -56,7 +56,7 @@ py_binary(
     imports = ["."],
 
     data = [
-        "//spines:bullet_spine",
+        "@upkie//spines:bullet_spine",
     ],
     deps = [
         "@upkie//upkie/envs",
