--- a/environment.yaml
+++ b/environment.yaml
@@ -2,8 +2,10 @@ name: ppo_balancer
 channels:
     - https://conda.anaconda.org/conda-forge
 dependencies:
-    - gin-config >= 0.5.0
-    - gymnasium >= 0.28.1
-    - stable-baselines3 >= 2.1.0
+    - gin-config >=0.5.0
+    - gymnasium >=0.28.1
+    - loop-rate-limiters >=1.0.0
+    - stable-baselines3 >=2.1.0
     - tensorboard
-    - upkie >= 3.4.0
+    - upkie >=5.0.0
+    - upkie_description >=2.1.0
