--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,7 @@ channels:
     - https://conda.anaconda.org/conda-forge
 dependencies:
     - gin-config >=0.5.0
-    - gymnasium >=0.28.1
-    - stable-baselines3 >=2.1.0
+    - gymnasium >=0.28.1,<1.0
+    - stable-baselines3 >=2.1.0,<3.0
     - tensorboard
-    - upkie >=5.1.0
+    - upkie ==5.2.0
