Ignore pixi files in rsync and git

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ conda_env.tar.gz
 tools/bazel
 training/
 
-# pixi environments
-.pixi
+# pixi and pixi-pack
 *.egg-info
+.pixi
+activate.sh
+env/
 environment.tar
