Update upkie version in pixi dependencies

--- a/environment.yaml
+++ b/environment.yaml
@@ -6,4 +6,4 @@ dependencies:
     - gymnasium >=0.28.1,<1.0
     - stable-baselines3 >=2.1.0,<3.0
     - tensorboard
-    - upkie ==8.0.0
+    - upkie >=8.0.0,<9
