--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ upkie = ">=8,<9"
 pixi-pack = "*"
 
 [tool.pixi.feature.pack.tasks]
-pack-to-upkie = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-errors"
+pack-to-upkie = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-non-wheel"
 
 [tool.pixi.environments]
 default = { features = [], solve-group = "default" }
