--- a/ppo_balancer/BUILD
+++ b/ppo_balancer/BUILD
@@ -48,7 +48,10 @@ py_binary(
 
 py_binary(
     name = "train",
-    srcs = ["train.py"],
+    srcs = [
+        "reward_wrapper.py",
+        "train.py",
+    ],
     main = "train.py",
 
     # Enable `from X import y` rather than `from agents.agent_name.X import y`
