Add tensorboard feature to pixi configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,15 @@ ppo_balancer = { path = ".", editable = true }
 gin-config = ">=0.5.0"
 gymnasium = ">=1.0.0"
 stable-baselines3 = ">=2.1.0,<3.0"
-tensorboard = "*"
 upkie = ">=8,<9"
 
-[tool.pixi.feature.pack.dependencies]
-pixi-pack = "*"
+[tool.pixi.feature.pack]
+dependencies = { pixi-pack = "*" }
+tasks.pack-to-upkie = { cmd = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-non-wheel" }
 
-[tool.pixi.feature.pack.tasks]
-pack-to-upkie = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-non-wheel"
+[tool.pixi.feature.tensorboard]
+dependencies = { tensorboard = ">=2,<3" }
+tasks.tensorboard = { cmd = "tensorboard --logdir $UPKIE_TRAINING_PATH/$(date +%Y-%m-%d)" }
 
 [tool.pixi.tasks.agent]
 cmd = "python ppo_balancer/run.py"
@@ -41,5 +42,6 @@ args = ["nb_envs"]
 cmd = "./tools/bazelisk run //ppo_balancer:train -- --nb-envs {{ nb_envs }} --show"
 
 [tool.pixi.environments]
-default = { features = [], solve-group = "default" }
-pack = { features = ["pack"], solve-group = "default" }
+default = { features = [] }
+pack = { features = ["pack"] }
+tensorboard = { features = ["tensorboard"] }
